Prototype_Setup/control-engine-setup/controller-cloud1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: controller-cloud1
  labels:
    app: control-engine
    cluster: cloud1
spec:
  containers:
  - name: controller-cloud1
    image: samodha/microfog:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
  serviceAccountName: controller-serviceaccount
