Prototype_Setup/control-engine-setup/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-engine
  labels:
    app: control-engine
    service: control-engine
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: control-engine
