Prototype_Setup/control-engine-setup/controller-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: control-engine-dr
spec:
  host: "control-engine.control-engine.svc.cluster.local"
  subsets:
  - name: fog1
    labels:
      cluster: fog1
  - name: fog2
    labels:
      cluster: fog2
  - name: cloud1
    labels:
      cluster: cloud2
